--- a/list.ipynb
+++ b/list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "list.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKSXtm7hmK0bDaqo+jhVhF",
+      "authorship_tag": "ABX9TyMCYhztGNxRbMQuvLrNVKZ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,13 +197,94 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "'''WAP to  to count the number of strings where the string length is 2 or more and the first and last character are same from a given list of strings. Go to the editor\n",
+        "Sample List : ['abc', 'xyz', 'aba', '1221']\n",
+        "Expected Result : 2'''\n",
+        "lst=[]\n",
+        "c=0\n",
+        "n=int(input())\n",
+        "for i in range(0,n):\n",
+        "  ele=input()\n",
+        "  lst.append(ele)\n",
+        "print(lst)\n",
+        "for j in range(0,n):\n",
+        "  s=lst[j]\n",
+        "  while(len(s)>=2):\n",
+        "    #print(len(s))\n",
+        "    #print(s[0],s[-1])\n",
+        "    if(s[0]==s[-1]):\n",
+        "      c=c+1\n",
+        "    else:\n",
+        "      break\n",
+        "    break\n",
+        "print(\"the count is \",c)\n",
+        "\n",
+        "      \n"
       ],
       "metadata": {
-        "id": "4P-30_zd4h1M"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4P-30_zd4h1M",
+        "outputId": "bb70c00b-e060-4462-8cbb-0b53d52e1009"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "89\n",
+            "166741\n",
+            "88990088\n",
+            "87\n",
+            "2\n",
+            "['89', '166741', '88990088', '87', '2']\n",
+            "the count is  2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''Write a Python program to get a list, sorted in increasing order by the last element in each tuple from a given list of non-empty tuples. Go to the editor\n",
+        "Sample List : [(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]\n",
+        "Expected Result : [(2, 1), (1, 2), (2, 3), (4, 4), (2, 5)]'''\n",
+        "\n",
+        "print(\"enter length\")\n",
+        "n=int(input())\n",
+        "lst=[]\n",
+        "for i in range(0,n):\n",
+        "  ele=tuple(input())\n",
+        "  lst.append(ele)\n",
+        "print(lst)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "57QiTS465nO-",
+        "outputId": "23cf9d90-cb11-4a79-ee70-e00f9eff20c2"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter length\n",
+            "5\n",
+            "21\n",
+            "25\n",
+            "12\n",
+            "44\n",
+            "23\n",
+            "[('2', '1'), ('2', '5'), ('1', '2'), ('4', '4'), ('2', '3')]\n"
+          ]
+        }
+      ]
     }
   ]
 }
