--- a/list.ipynb
+++ b/list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "list.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCYhztGNxRbMQuvLrNVKZ8",
+      "authorship_tag": "ABX9TyPuEY3ZJNDFsRQeOZ8ywDBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
         },
         "outputId": "ae420826-b102-4cbb-aca6-cbfd970d083d"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
         "id": "qWeylqE8xIC7",
         "outputId": "dbba9554-90d3-4ca1-f00f-dd24950f5ea3"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "id": "4P-30_zd4h1M",
         "outputId": "bb70c00b-e060-4462-8cbb-0b53d52e1009"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,20 +253,20 @@
         "Sample List : [(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]\n",
         "Expected Result : [(2, 1), (1, 2), (2, 3), (4, 4), (2, 5)]'''\n",
         "\n",
-        "print(\"enter length\")\n",
-        "n=int(input())\n",
-        "lst=[]\n",
-        "for i in range(0,n):\n",
-        "  ele=tuple(input())\n",
-        "  lst.append(ele)\n",
-        "print(lst)"
+        "def last(n): return n[-1]\n",
+        "\n",
+        "def sort_list_last(tuples):\n",
+        "  return sorted(tuples, key=last)\n",
+        "\n",
+        "print(sort_list_last([(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]))\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "57QiTS465nO-",
-        "outputId": "23cf9d90-cb11-4a79-ee70-e00f9eff20c2"
+        "outputId": "2127761f-6f77-4706-84a3-07a0268de9af"
       },
       "execution_count": 18,
       "outputs": [
@@ -274,14 +274,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter length\n",
-            "5\n",
-            "21\n",
-            "25\n",
-            "12\n",
-            "44\n",
-            "23\n",
-            "[('2', '1'), ('2', '5'), ('1', '2'), ('4', '4'), ('2', '3')]\n"
+            "[(2, 1), (1, 2), (2, 3), (4, 4), (2, 5)]\n"
           ]
         }
       ]
