--- a/list.ipynb
+++ b/list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "list.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPuEY3ZJNDFsRQeOZ8ywDBs",
+      "authorship_tag": "ABX9TyOxbTbIgRG5GOrKVdWSFuOd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,22 +253,22 @@
         "Sample List : [(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]\n",
         "Expected Result : [(2, 1), (1, 2), (2, 3), (4, 4), (2, 5)]'''\n",
         "\n",
-        "def last(n): return n[-1]\n",
+        "def last(n): \n",
+        "  return n[-1]\n",
         "\n",
         "def sort_list_last(tuples):\n",
         "  return sorted(tuples, key=last)\n",
         "\n",
-        "print(sort_list_last([(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]))\n",
-        "\n"
+        "print(sort_list_last([(2, 5), (1, 2), (4, 4), (2, 3), (2, 1)]))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "57QiTS465nO-",
-        "outputId": "2127761f-6f77-4706-84a3-07a0268de9af"
+        "outputId": "f9e04824-c0ca-484b-d4e7-824025477527"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,6 +278,96 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write a Python program to remove duplicates from a list. Go to the editor\n",
+        "print(\"Enter Length\")\n",
+        "n=int(input())\n",
+        "lst=[]\n",
+        "c=0\n",
+        "for i in range(n):\n",
+        "  ele=int(input())\n",
+        "  lst.append(ele)\n",
+        "st=set()\n",
+        "for j in range(n):\n",
+        "  st.add(lst[j])\n",
+        "lst1=list(st)\n",
+        "print(lst1)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rOJwNeD9Z7m6",
+        "outputId": "2bef1af0-9266-4c29-c34d-5788fbbffa77"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Length\n",
+            "3\n",
+            "21\n",
+            "21\n",
+            "22\n",
+            "[21, 22]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write a Python program to check a list is empty or not. Go to the editor\n",
+        "print(\"Enter length\")\n",
+        "n=int(input())\n",
+        "lst=[]\n",
+        "for i in range(n):\n",
+        "  ele=int(input())\n",
+        "  lst.append(ele)\n",
+        "n1=len(lst)\n",
+        "if n1>0:\n",
+        "  print(\"not null\")\n",
+        "else:\n",
+        "  print(\"null\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IKrZk9jtc10V",
+        "outputId": "8ef31dd4-9095-4f82-e604-e57ec7da37ea"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter length\n",
+            "0\n",
+            "null\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "M9xF1l24z79_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
