--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmZfeIWJj+i4TaD/rJBYU7",
+      "authorship_tag": "ABX9TyMHxqjNryC5sjbcsq0EduTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,6 +238,86 @@
             "Eligible\n",
             "Continue?\tY or\tN\n",
             "n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "WAP to print all the nos. in a given range eg.(5,45) using **BREAK & CONTINUE**"
+      ],
+      "metadata": {
+        "id": "sstf3n-sgVaa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i=0\n",
+        "while(True):\n",
+        "  if(i<5):\n",
+        "    i=i+1\n",
+        "    continue\n",
+        "  print(i)\n",
+        "  i=i+1\n",
+        "  if(i>45):\n",
+        "    break\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ig1iaC2gnJQ",
+        "outputId": "f545c535-d8cb-49e5-af7e-18650078161e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n"
           ]
         }
       ]
