--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHxqjNryC5sjbcsq0EduTG",
+      "authorship_tag": "ABX9TyPgsjuLdN/OTNQhsfgU3sIl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
         "id": "GpYzec1WR3mF",
         "outputId": "dc40e2e4-5d5f-4d12-8777-0655b1e096c5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "id": "2-ft1SIlVUmZ",
         "outputId": "61b045ac-dc73-43dd-b04f-8c425a248b3e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
         "id": "uwASVZj_XJR4",
         "outputId": "ddfdfc86-c8ce-48d5-e3d3-53840d254e93"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         "id": "fdTK9D9gb5pT",
         "outputId": "5aa707eb-e8e8-40d2-b91e-20c4cfe6c5e1"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -271,7 +271,7 @@
         "id": "2ig1iaC2gnJQ",
         "outputId": "f545c535-d8cb-49e5-af7e-18650078161e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,6 +318,57 @@
             "43\n",
             "44\n",
             "45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "take input until and uness user inputs no. greater than 100, and once its done print congo,u got 100 "
+      ],
+      "metadata": {
+        "id": "W2jYCuwxmOjd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input())\n",
+        "while(n<100):\n",
+        "  print(\"pls try again\")\n",
+        "  n=int(input())\n",
+        "  continue\n",
+        "print(\"congo,got 100+\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CktEp-tdmPj5",
+        "outputId": "50a3f9b2-4687-4b11-d2b8-98723756660a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "99\n",
+            "pls try again\n",
+            "65\n",
+            "pls try again\n",
+            "90\n",
+            "pls try again\n",
+            "32\n",
+            "pls try again\n",
+            "-1\n",
+            "pls try again\n",
+            "0\n",
+            "pls try again\n",
+            "103\n",
+            "congo,got 100+\n"
           ]
         }
       ]
