--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgsjuLdN/OTNQhsfgU3sIl",
+      "authorship_tag": "ABX9TyOiXuLHtLXhr+9u6B5E0/Hq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,6 +369,117 @@
             "pls try again\n",
             "103\n",
             "congo,got 100+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while(True):\n",
+        "  print(\"Enter a no.\")\n",
+        "  n=int(input())\n",
+        "  if n>100:\n",
+        "    print('got it 100+')\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"pls try again\")\n",
+        "    continue"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u2UgdqLvoSVD",
+        "outputId": "8301030e-423e-4ee2-cde5-df66581ebcf3"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a no.\n",
+            "67\n",
+            "pls try again\n",
+            "Enter a no.\n",
+            "43\n",
+            "pls try again\n",
+            "Enter a no.\n",
+            "1000\n",
+            "got it 100+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "WAP to enter a no \"n\" and make the other user guess which no. has been inputed, if no is less or greater than let the user know what is the difference .\n",
+        "the no of max guess is 9.\n",
+        "prit no. of guesses. and gameover "
+      ],
+      "metadata": {
+        "id": "-0GeyTCuptLd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"player 1:Enter the no.\")\n",
+        "n = int (input())\n",
+        "c=0\n",
+        "while (c<6):\n",
+        "  print(\"player2: guess the no.\")\n",
+        "  m=int(input())\n",
+        "  if(n>m):\n",
+        "    c=c+1\n",
+        "    print(\"u guessed a smaller no.\")\n",
+        "    continue\n",
+        "  elif n<m: \n",
+        "    c=c+1\n",
+        "    print (\"u guessed a greater no.\")\n",
+        "    continue\n",
+        "  elif n==m:\n",
+        "    print(\"gotcha,u got at\",c,\"steps\")\n",
+        "    break\n",
+        "if(c==6):\n",
+        "  print(\"game-over\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xXnWfghVqYq7",
+        "outputId": "9b9436e6-90d7-4107-bf46-bd1098559be8"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "player 1:Enter the no.\n",
+            "5\n",
+            "player2: guess the no.\n",
+            "3\n",
+            "u guessed a smaller no.\n",
+            "player2: guess the no.\n",
+            "6\n",
+            "u guessed a greater no.\n",
+            "player2: guess the no.\n",
+            "7\n",
+            "u guessed a greater no.\n",
+            "player2: guess the no.\n",
+            "8\n",
+            "u guessed a greater no.\n",
+            "player2: guess the no.\n",
+            "2\n",
+            "u guessed a smaller no.\n",
+            "player2: guess the no.\n",
+            "1\n",
+            "u guessed a smaller no.\n",
+            "game-over\n"
           ]
         }
       ]
