--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -626,23 +626,23 @@
         "id": "TfyO4PNYILwG"
       },
       "source": [
-        "**READ A FILE **"
+        "**READ A FILE and OTHER RELATED STUFFS **"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a3DdH-l5lvqA",
-        "outputId": "ca7d7396-c4a2-4e50-a773-bed7050201cb"
+        "outputId": "d583b4a4-01be-452c-df7e-4659a5f58ebd"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "ekagra varma is a good boy\n",
             "he is a smart boy\n",
@@ -656,7 +656,13 @@
             "ekagra varma is a good boy\n",
             "he is a smart boy\n",
             "this is the way to append\n",
-            "appended\n"
+            "appended\n",
+            "ekagra varma is a good boy\n",
+            "\n",
+            "he is a smart boy\n",
+            "\n",
+            "ekagra varma is a good boy\n",
+            "\n"
           ]
         }
       ],
@@ -665,26 +671,47 @@
         "g= open(\"ekagra.txt\",\"w\")\n",
         "g.write(\"ekagra varma is a good boy\\nhe is a smart boy\\n\")\n",
         "g.close()\n",
+        "\n",
+        "##########################################################\n",
         "f= open(\"ekagra.txt\",\"r\")\n",
         "q=f.read() #read entire line\n",
         "print(q)\n",
         "w=f.readline() #readline by line\n",
         "r=f.readlines() # read line as list \n",
         "f.close()\n",
-        "\n",
         "print(r)\n",
         "print(w)\n",
+        "\n",
+        "##########################################################\n",
         "h=open(\"ekagra.txt\",\"a\")\n",
         "h.write(\"this is the way to append\\n\")\n",
         "h.close()\n",
+        "##########################################################\n",
         "h=open(\"ekagra.txt\",\"r\")\n",
         "print(h.read())\n",
         "h.close()\n",
+        "##########################################################\n",
         "f=open(\"ekagra.txt\",\"a\")\n",
         "f.write(\"appended\")\n",
         "f.close()\n",
+        "##########################################################\n",
         "f=open(\"ekagra.txt\",\"r\")\n",
         "print(f.read())\n",
+        "f.close()\n",
+        "\n",
+        "##########################################################\n",
+        "f=open(\"ekagra.txt\",'r')\n",
+        "print(f.readline())\n",
+        "f.seek(27) # it takes the file pointer to that place ,(27) is char  \n",
+        "f.tell()  # it tells where the file pointer is \n",
+        "print(f.readline())\n",
+        "f.close()\n",
+        "\n",
+        "\n",
+        "##########################################################\n",
+        "with open(\"ekagra.txt\") as f: #it also opens the file\n",
+        "  a=f.readline()\n",
+        "  print(a)\n",
         "f.close()\n"
       ]
     },
@@ -728,37 +755,272 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "colab": {
-          "background_save": true
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "dfPYk8LHwoKR"
+        "id": "dfPYk8LHwoKR",
+        "outputId": "73e6a23e-f81d-442c-fb0d-e4bbfc9607ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t\tWell come to Python Tutorial\n",
+            "How many Rows You want Print:4\n",
+            "Enter Pattern formet True=1 False=0:1\n",
+            "\n",
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n"
+          ]
+        }
+      ],
       "source": [
-        "print (\"Enter no of rows\")\n",
-        "n=int(input())\n",
-        "print(\"enter 0 or 1\")\n",
-        "m=bool(input())\n",
-        "print(m)\n",
-        "while(m==True):\n",
-        "  for i in range(n):\n",
-        "    for j in range(i):\n",
-        "      print(\"*\")\n",
-        "while(m==False):\n",
-        "  for i in range(n):\n",
-        "    for j in range(n):\n",
-        "      print(\"*\")\n",
-        "    n=n-1  "
+        "#wap To print  a pattern * ** *** ****  AND **** *** ** *\n",
+        "\n",
+        "# print (\"Enter no of rows\")\n",
+        "# #n=int(input())\n",
+        "# n=4\n",
+        "# lst=[]\n",
+        "# #print(\"enter 0 or 1\")\n",
+        "# #m=bool(input())\n",
+        "# #if (m== True):\n",
+        "# for i in range(0,n):\n",
+        "#   for j in range(0,i+1):\n",
+        "#     print(\"*\",end = \"\")\n",
+        "#     j=0\n",
+        "#   print(\"\\n\")\n",
+        "print(\"\\t\\tWell come to Python Tutorial\")\n",
+        "value1=int(input(\"How many Rows You want Print:\"))\n",
+        "value2=int(input(\"Enter Pattern formet True=1 False=0:\"))\n",
+        "if value2==True:\n",
+        "    for i in range(0,value1+1):\n",
+        "        print(\"*\"*i)\n",
+        "else:\n",
+        "    for i in range(value1,0,-1):\n",
+        "        print(\"*\"*i)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=4\n",
+        "i=0\n",
+        "j=0\n",
+        "for i in range(n+1):\n",
+        "  #print(\"1\",i)\n",
+        "  for j in reversed(range(0,n)):\n",
+        "    #print(\"2\",j)\n",
+        "    print(\"*\",end=\"\")\n",
+        "  print(\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JGPt-p37piXy",
+        "outputId": "bfeb1683-8b81-4fb5-8492-ebb4b6746489"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "****\n",
+            "\n",
+            "****\n",
+            "\n",
+            "****\n",
+            "\n",
+            "****\n",
+            "\n",
+            "****\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***GLOBAL and LOCAL variables***"
+      ],
+      "metadata": {
+        "id": "UhUEaKQdQlNo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "        #global x  #for changing value of a global variable in a function , u need to declare a \"global\" keyword\n",
+        "    \n",
+        "x = 89\n",
+        "def harry():\n",
+        "    x = 20\n",
+        "    def rohan():\n",
+        "        global x\n",
+        "        x = 88\n",
+        "    # print(\"before calling rohan()\", x)\n",
+        "    rohan()\n",
+        "    print(\"after calling rohan()\", x)\n",
+        "\n",
+        "harry()\n",
+        "print(x)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_mI3BUX6QkDV",
+        "outputId": "d9915aa4-ed6e-4bec-943b-426f572622b5"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "after calling rohan() 20\n",
+            "88\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Recursion***"
+      ],
+      "metadata": {
+        "id": "4G9mn7z_WTDJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#factoial\n",
+        "print(\"enter no.\")\n",
+        "n=int(input())\n",
+        "def fact(n):\n",
+        "  if n==0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    \n",
+        "    return(n*fact(n-1))\n",
+        "v=fact(n)\n",
+        "print(v)\n",
+        "  \n",
+        "\n",
+        "#fibonacci no.\n",
+        "print()\n",
+        "a=0\n",
+        "b=1\n",
+        "c=a+b\n",
+        "def fib(n):\n",
+        "  if (n==0):\n",
+        "    return 1\n",
+        "  elif n==1:\n",
+        "    return 1\n",
+        "  else: return(fib(n-1)+fib(n-2))\n",
+        "v=fib(n)\n",
+        "print(v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NS-tslhMWXkx",
+        "outputId": "3aef0378-9218-4a6f-ab19-4ffdff2d4985"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter no.\n",
+            "5\n",
+            "120\n",
+            "\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***LAMBDA FUNCTION***"
+      ],
+      "metadata": {
+        "id": "rnKHdxDwh5nE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#it is an anonymous function \n",
+        "def sum1(a,b):\n",
+        "  s=a+b\n",
+        "  print(s)\n",
+        "sum1(4,3)\n",
+        "\n",
+        "sum2 = lambda x,y:x+y\n",
+        "print(sum2(4,3))\n",
+        "\n",
+        "####################################################\n",
+        "\n",
+        "lst = [[1,4],[5,6],[8,2]]\n",
+        "\n",
+        "sorty= lambda x:x[1]\n",
+        "lst.sort (key=sorty)\n",
+        "print(lst)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ammIKAQjh6lX",
+        "outputId": "614d070e-0807-4899-e83b-6d820428b4b6"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "7\n",
+            "[[8, 2], [1, 4], [5, 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "NMqwxS5coQBd"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN55ChkiYfd6ytiKXGxekwd",
+      "authorship_tag": "ABX9TyM2dGJzKDUiKIkYmwv9XIFW",
       "include_colab_link": true
     },
     "kernelspec": {
