--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -631,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -825,7 +825,7 @@
         "id": "JGPt-p37piXy",
         "outputId": "bfeb1683-8b81-4fb5-8492-ebb4b6746489"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +880,7 @@
         "id": "_mI3BUX6QkDV",
         "outputId": "d9915aa4-ed6e-4bec-943b-426f572622b5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,7 +938,7 @@
         "id": "NS-tslhMWXkx",
         "outputId": "3aef0378-9218-4a6f-ab19-4ffdff2d4985"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,9 +982,7 @@
         "lst.sort (key=sorty)\n",
         "print(lst)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n"
+        "####################################################"
       ],
       "metadata": {
         "colab": {
@@ -993,7 +991,7 @@
         "id": "ammIKAQjh6lX",
         "outputId": "614d070e-0807-4899-e83b-6d820428b4b6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,18 +1007,107 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "\n",
+        "Modules:\n"
       ],
       "metadata": {
         "id": "NMqwxS5coQBd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random as rd\n",
+        "s={}\n",
+        "n=9\n",
+        "for i in range(n):\n",
+        "\n",
+        "  ran= rd.randint(1,5)\n",
+        "  s[i]=ran\n",
+        "# for i in range(n):\n",
+        "print(s,end=\"\")"
+      ],
+      "metadata": {
+        "id": "M8Y9zG8ysWLd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9839db4b-a3fe-4d14-eb80-b87efc7c1b21"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: 2, 1: 5, 2: 1, 3: 1, 4: 1, 5: 1, 6: 2, 7: 4, 8: 4}"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***String Formatting & f string ***"
+      ],
+      "metadata": {
+        "id": "Vjh4K6iP0Ome"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1=\"EKAGRA\"\n",
+        "a2=\"VARMA\"\n",
+        "########## f-string ########\n",
+        "min= f\"this is {a1} {a2}\"\n",
+        "print(min)\n",
+        "##STRING FORMATING############################################\n",
+        "\n",
+        "min1= \"m name is %s %s\"%(a1,a2)\n",
+        "print(min1)\n",
+        "\n",
+        "min2= \"my name is {1} {0}\"\n",
+        "min3=min2.format(a1,a2)\n",
+        "print(min3)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_3CS8fjJxhLt",
+        "outputId": "5824347a-5e45-48a8-d970-07ca8d96e5f9"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "this is EKAGRA VARMA\n",
+            "m name is EKAGRA VARMA\n",
+            "my name is VARMA EKAGRA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CB-Y0nsBzgR4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2dGJzKDUiKIkYmwv9XIFW",
+      "authorship_tag": "ABX9TyNHmYuYoiITp+UcNiGJaWLG",
       "include_colab_link": true
     },
     "kernelspec": {
